# kuka_arm

./: .gitignore  README.md  kuka_arm.files  kuka_arm.includes
ball_description/: CMakeLists.txt
ball_description/config/: robot_state_visualize.rviz
ball_description/launch/: ball_description.launch  load_ball.launch
ball_description/urdf/: ball.gazebo.xacro  ball.urdf.xacro
ball_on_plate_description/ball_description/: package.xml
ball_on_plate_description/ball_description/config/: robot_state_visualize.rviz
ball_on_plate_description/ball_description/launch/: load_ball.launch  load_ball.launch~
ball_on_plate_description/ball_description/urdf/: ball.gazebo.xacro  ball.urdf.xacro  ball.xacro
ball_on_plate_description/kuka_kr5_description/: package.xml
ball_on_plate_gazebo/: CMakeLists.txt  package.xml
ball_on_plate_gazebo/config/: joint_state_controller.yaml  model.rviz
camera_description/: CMakeLists.txt  package.xml
doc/: pid_controller_test.m4v
kr5_description/: CMakeLists.txt  package.xml
kuka_kr5_control/: CMakeLists.txt  package.xml
kuka_kr5_description/: CMakeLists.txt  README.md
kuka_kr5_gazebo/: CMakeLists.txt  package.xml
kuka_manipulator_description/: CMakeLists.txt  package.xml
kuka_manipulator_description/launch/: load_kr5.launch  test_kr5.launch
kuka_manipulator_description/meshes/tools/collision/: plate_tool.stl
kuka_manipulator_description/urdf/: kr5.gazebo.xacro  kr5.urdf.xacro  kr5.xacro
kuka_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
universal_robot/: README.md
(+118 files in other folders)
